--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "apollo-boost": "0.4.4",
     "axios": "0.19.0",
+    "graphql": "14.5.8",
+    "graphql-tag": "2.10.1",
     "mediaelement": "4.2.14",
     "vue": "^2.5.22",
+    "vue-apollo": "3.0.0",
     "vue-axios": "2.1.5",
     "vue-router": "3.1.3",
     "vuex": "3.1.2"
